--- a/weather-me-app/src/main/resources/message/error_message_en.properties
+++ b/weather-me-app/src/main/resources/message/error_message_en.properties
@@ -1,3 +1,4 @@
-DEFAULT_ERROR_MESSAGE=Özür dileriz, şu anda işleminizi gerçekleştiremiyoruz. Lütfen daha sonra tekrar denetiniz.
+DEFAULT_ERROR_MESSAGE=Özür dileriz, şu anda işleminizi gerçekleştiremiyoruz. Lütfen daha sonra tekrar deneyiniz.
 N00040-00040=Kaydedilemedi. english
-N00400-00400=Bulunamadı. english
+N00400-00400=Hatalı istek. english
+N00404-00404=Bulunamadı. english
