commit and push

--- a/weather-me-app/src/main/resources/message/error_message_en.properties
+++ b/weather-me-app/src/main/resources/message/error_message_en.properties
@@ -1,4 +1,18 @@
 DEFAULT_ERROR_MESSAGE=Özür dileriz, şu anda işleminizi gerçekleştiremiyoruz. Lütfen daha sonra tekrar deneyiniz.
+N00010-00010=Kayıt bulunamadı. english
+N00020-00020=Zorunlu alan eksik. english
+N00021-00021=Zorunlu alan hatalı. english
 N00040-00040=Kaydedilemedi. english
+N00041-00041=Güncellenemedi. english
+N00042-00042=Silinemedi. english
+N00043-00043=Kayıt zaten mevcut. english
+N00050-00050=Geçersiz servis. english
 N00400-00400=Hatalı istek. english
+N00401-00401=Yetki hatası. english
+N00403-00403=Engellenmiş. english
 N00404-00404=Bulunamadı. english
+N00500-00500=Dahili hata. english
+N99999-99999=Beklenmeyen hata. english
+# Add your error_messages below
+N00020-00100=locationId değeri verilmemiş. english
+N00010-00101=Dakikadaki API çağrım sayısı aşıldı. english
