--- a/weather-me-app/src/main/resources/message/error_message_tr.properties
+++ b/weather-me-app/src/main/resources/message/error_message_tr.properties
@@ -1,4 +1,18 @@
 DEFAULT_ERROR_MESSAGE=Özür dileriz, şu anda işleminizi gerçekleştiremiyoruz. Lütfen daha sonra tekrar deneyiniz.
+N00010-00010=Kayıt bulunamadı. turkish
+N00020-00020=Zorunlu alan eksik. turkish
+N00021-00021=Zorunlu alan hatalı. turkish
 N00040-00040=Kaydedilemedi. turkish
+N00041-00041=Güncellenemedi. turkish
+N00042-00042=Silinemedi. turkish
+N00043-00043=Kayıt zaten mevcut. turkish
+N00050-00050=Geçersiz servis. turkish
 N00400-00400=Hatalı istek. turkish
+N00401-00401=Yetki hatası. turkish
+N00403-00403=Engellenmiş. turkish
 N00404-00404=Bulunamadı. turkish
+N00500-00500=Dahili hata. turkish
+N99999-99999=Beklenmeyen hata. turkish
+# Add your error_messages below
+N00020-00100=locationId değeri verilmemiş. turkish
+N00010-00101=Dakikadaki API çağrım sayısı aşıldı. turkish
